Delivery section design

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -6,6 +6,7 @@ $color_primary_darker: #990015;
 $color_accent: #151515;
 $color_accent-light: #413F4A;
 $color_accent-lighter: #625F61;
+$color_accent-lightest: #f1f1f1;
 $color_success: #2ecc71;
 
 body, html{
