Enhance geocoding auto comlete suggestions and area results

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -4,9 +4,10 @@ $color_primary_lighter: #FEC6AC;
 $color_primary_dark: rgb(196, 0, 42);
 $color_primary_darker: #990015;
 $color_accent: #151515;
-$color_accent-light: #413F4A;
-$color_accent-lighter: #625F61;
-$color_accent-lightest: #f1f1f1;
+$color_accent_light: #413F4A;
+$color_accent_lighter: #625F61;
+$color_accent_lightest: #f1f1f1;
+$color_accent_sky: #E3F2FA;
 $color_success: #2ecc71;
 
 body, html{
