Extract service owner modal of table component to a separate one

--- a/client/src/styles/table.scss
+++ b/client/src/styles/table.scss
@@ -37,6 +37,10 @@
     justify-content: space-around;
 }
 
+.rating {
+    margin: auto;
+}
+
 .body-section {
     display: flex;
     flex-direction: row;
