search result page

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -39,3 +39,9 @@ body, html{
       max-width: 1400px;
   }
 }
+
+.btn-card{
+  color: #fff;
+  background-color: #FD6A62;
+  border-color: #FD6A62;
+}
