--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -31,6 +31,15 @@ body, html{
 .navbar-expand-md .navbar-collapse{
   justify-content: center;
   align-items: center;
+  // background-color: #2E2E2E;
+}
+.navbar{
+  background-color: #2E2E2E !important;
+  color: white !important;
+  position: fixed;
+  width: 100vw;
+  z-index: 2;
+  opacity: 0.9;
 }
 
 @media (min-width: 1200px){
@@ -44,4 +53,14 @@ body, html{
   color: #fff;
   background-color: #FD6A62;
   border-color: #FD6A62;
+}
+
+.page-footer{
+  background-color: #2E2E2E;
+  flex-shrink: 0;
+  color:white  
+}
+
+.nav-link, .nav-item, .navbar-toggler-icon,.navbar-brand{
+  color:white !important;
 }
