--- a/client/src/styles/productowner_details.scss
+++ b/client/src/styles/productowner_details.scss
@@ -5,12 +5,23 @@
     flex-direction: column;
     justify-items: start;
     flex-grow: 3;
+    padding: 0 5% 0 5%;
+}
+
+.left-card {
+    display: flex;
+    justify-content: space-between;
 }
 
 .book-rating {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+}
+
+.book-rating > input {
+    justify-content: center;
     align-items: center;
+    margin: auto;
 }
 
 .book-rating > h4 {
