--- a/client/src/styles/form.scss
+++ b/client/src/styles/form.scss
@@ -87,3 +87,7 @@ input[type=file] {
   margin-bottom: 15px;
   font-family: "Montserrat", sans-serif;
 }
+.form-control{
+  width: 98% !important;
+  display: inline-block !important;
+}
