--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -64,3 +64,7 @@ body, html{
 .nav-link, .nav-item, .navbar-toggler-icon,.navbar-brand{
   color:white !important;
 }
+a:-webkit-any-link {
+  text-decoration: none;
+  color: inherit;
+  } 
