--- a/client/src/components/product owner/Cart/Product.css
+++ b/client/src/components/product owner/Cart/Product.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
     text-align: center;
   }
   img, embed, object, video{
@@ -112,4 +112,4 @@
   }
    a{
       text-decoration: none;
-  }
+  } */
