--- a/client/src/styles/content.scss
+++ b/client/src/styles/content.scss
@@ -91,6 +91,7 @@
     padding: 1%;
     justify-content: space-between;
     background-color: $color_accent_light;
+    margin: 0 0 2% 0;
     // flex-grow: 1;
 }
 
