optimize create order page

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -72,3 +72,11 @@ a:-webkit-any-link {
 .MuiGrid-container{
 align-items: center !important;
 }
+// .makeStyles-appBarShift-5 {
+//   z-index: -1 !important;
+//   position: fixed;
+// }
+// .MuiGrid-item{
+//   z-index: -2 !important;
+//   position: relative;
+// }
