--- a/client/src/styles/about-us.scss
+++ b/client/src/styles/about-us.scss
@@ -11,4 +11,11 @@
 .about-us-title {
     margin-bottom: 10px;
     padding-bottom: 15px;
+    text-align: center ;
+}
+
+.about-us-col{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
