--- a/client/src/styles/details.scss
+++ b/client/src/styles/details.scss
@@ -17,3 +17,15 @@
     display: flex;
     flex-grow: 1;
 }
+
+.to-cart-section {
+    display: flex;
+    padding: 0px;
+    height: 25px;
+}
+
+.in-stock-badge {
+    align-items: center;
+    height: 25px;
+    margin: 0px !important;
+}
